# chatapi

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  STATUS.md  config.example.toml  docker-compose.yml  sepecs.md  specs.md
.knowledge/: MOC.md  implementation-status.md
.knowledge/architecture/: architecture-overview.md  full-platform-architecture.md  ring-buffer-ipc.md
.knowledge/components/: cdp-engine-module.md  frontend-dashboard.md  gateway-module.md  mcp-integration.md  rules-engine.md  session-management.md  sse-streaming.md  telemetry-module.md  tool-system.md
.knowledge/decisions/: adr-001-rust-axum.md  adr-002-cdp-over-unix-socket.md  adr-003-deepseek-target.md  adr-004-shared-memory-ringbuf.md  adr-005-plugin-architecture.md  adr-006-dual-target-mode.md  adr-007-solidjs-dashboard.md
.knowledge/reference/: uber-clone003-blueprint.md  uber-clone003-status.md
.knowledge/references/: deepseek-cdp-notes.md  openai-api-spec.md
.knowledge/tests/: benchmark-suite.md  test-strategy.md
agents/: Cargo.toml
agents/src/: agent.rs  error.rs  lib.rs  message.rs  orchestrator.rs  state.rs  task.rs
agents/src/agents/: architecture.rs  coding.rs  debugging.rs  github.rs  mod.rs  testing.rs  wiki.rs
cdp-engine/: Cargo.toml
cdp-engine/src/: cdp.rs  discovery.rs  engine.rs  lib.rs  main.rs
docs/superpowers/specs/: 2026-05-25-chatapi-full-platform-design.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: AgentPanel.tsx  ChatPanel.tsx  ConfigPanel.tsx  FileTree.tsx  MonacoEditor.tsx  SessionList.tsx  Terminal.tsx
frontend/src/lib/: agent.ts  api.ts  streaming.ts  websocket.ts
frontend/src/styles/: index.css
gateway/: Cargo.toml
gateway/src/: lib.rs  main.rs  rate_limit.rs  routes.rs  state.rs  streaming.rs  ws.rs
gateway/tests/: e2e.rs
mcp/: Cargo.toml
mcp/src/: client.rs  lib.rs  protocol.rs
ringbuf/: Cargo.toml
ringbuf/src/: buffer.rs  channel.rs  lib.rs
rules/: Cargo.toml
rules/src/: config.rs  filter.rs  lib.rs  prompt.rs
sessions/: Cargo.toml
sessions/src/: lib.rs  manager.rs  models.rs  store.rs
shared/: Cargo.toml
shared/src/: lib.rs  target.rs  tool_parser.rs  traits.rs
targets/: Cargo.toml
targets/src/: api.rs  browser.rs  lib.rs  router.rs
tests/: e2e.sh
tools/: Cargo.toml
tools/src/: file_ops.rs  git_ops.rs  lib.rs  registry.rs  search.rs  terminal.rs
