[workspace]
resolver = "2"
members = [
    "gateway",
    "cdp-engine",
    "ringbuf",
    "shared",
    "rules",
    "tools",
    "targets",
    "sessions",
    "mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.8", features = ["macros", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
bytes = "1"
tokio-tungstenite = "0.26"
futures-util = "0.3"
rtrb = "0.3"
chrono = { version = "0.4", features = ["serde"] }
hyper = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
regex = "1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
