[package]
name = "chatapi-agents"
version = "0.1.0"
edition = "2021"

[dependencies]
chatapi-shared = { path = "../shared" }
chatapi-tools = { path = "../tools" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
anyhow = "1"
