[package]
name = "chatapi-rules"
version.workspace = true
edition.workspace = true

[dependencies]
chatapi-shared = { path = "../shared" }
serde.workspace = true
serde_json.workspace = true
toml = "0.8"
glob = "0.3"
tracing.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile = "3"
