[package]
name = "chatapi-sessions"
version.workspace = true
edition.workspace = true

[dependencies]
chatapi-shared = { path = "../shared" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
anyhow.workspace = true
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
