[package]
name = "chatapi-targets"
version.workspace = true
edition.workspace = true

[dependencies]
chatapi-shared = { path = "../shared" }
chatapi-cdp-engine = { path = "../cdp-engine" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tracing.workspace = true
anyhow.workspace = true
async-trait = "0.1"
futures-util.workspace = true
bytes.workspace = true
