[package]
name = "chatapi-tools"
version.workspace = true
edition.workspace = true

[dependencies]
chatapi-shared = { path = "../shared" }
chatapi-rules = { path = "../rules" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
async-trait = "0.1"
thiserror.workspace = true
glob = "0.3"
regex.workspace = true
